--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "start": "node ./bin/private-bower"
     },
     "dependencies": {
+      "async": "^0.7.0",
+      "redis": "^0.10.3",
 	    "body-parser": "1.3.0",
         "q": "1.0.x",
         "mkdirp": "0.5.x",
